--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: 15.0.1
   fluttertoast: ^8.2.2
+  permission_handler: ^11.0.1
   provider: ^6.0.5
   shared_preferences: ^2.2.1
 
