--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: 15.0.1
   fluttertoast: ^8.2.2
+  package_info_plus: ^4.1.0
   permission_handler: ^11.0.1
   provider: ^6.0.5
   shared_preferences: ^2.2.1
@@ -22,7 +23,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  assets:
+    - images/
   fonts:
     - family: Comfortaa
       fonts:
