Gradle build setup

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "my_todo",
-    "short_name": "my_todo",
+    "name": "dodone",
+    "short_name": "dodone",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
