--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   permission_handler: ^11.0.1
   provider: ^6.0.5
   shared_preferences: ^2.2.1
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
@@ -28,8 +29,5 @@ flutter:
   fonts:
     - family: Comfortaa
       fonts:
-#        - asset: fonts/Comfortaa/Comfortaa-Bold.ttf
-#        - asset: fonts/Comfortaa/Comfortaa-Light.ttf
-#        - asset: fonts/Comfortaa/Comfortaa-Medium.ttf
         - asset: fonts/Comfortaa/Comfortaa-Regular.ttf
         - asset: fonts/Comfortaa/Comfortaa-SemiBold.ttf
