--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "dodone",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#3FBAC2",
-    "theme_color": "#3FBAC2",
+    "background_color": "#hexcode",
+    "theme_color": "#hexcode",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
