Remove support for windows, web

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Platforms
-/windows/
-/web/
-
 # Miscellaneous
 *.class
 *.log
@@ -46,3 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Platforms
+windows
+web
