--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
-name: my_todo
-description: A new Flutter project.
+name: dodone
+description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_local_notifications: 15.0.1
+  flutter_local_notifications: 18.0.1
   fluttertoast: ^8.2.2
   package_info_plus: ^4.1.0
   permission_handler: ^11.0.1
