--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dodone
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.1
+version: 0.1.1+2
 
 environment:
   sdk: ^3.5.4
