--- a/android/.gitignore
+++ b/android/.gitignore
@@ -8,5 +8,6 @@ GeneratedPluginRegistrant.java
 
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/to/reference-keystore
+key.properties
 **/*.keystore
 **/*.jks
